samples/_failures_safe/1761044500_8e4d24_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f9ef3bd4.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_f9ef3bd4.c:159: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_f9ef3bd4.c:158:5: error: expected declaration or statement at end of input
  158 |     for
      |     ^~~
